[package]
name = "wcore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
arr_macro = "0.1.3"
bitflags = "1.3"
bit_field = "0.10.1"

[dependencies.byteorder]
version = "1.2.4"
default-features = false
